--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
         "@ngx-translate/core": "^8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
+        "angular2-csv": "^0.2.5",
         "chart.js": "^2.7.1",
         "core-js": "^2.5.1",
         "font-awesome": "^4.7.0",
