--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@angular/platform-browser-dynamic": "^5.0.1",
         "@angular/router": "^5.0.1",
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+        "@ng-select/ng-select": "^0.16.0",
         "@ngx-translate/core": "^8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
         "angular2-csv": "^0.2.5",
@@ -33,6 +34,8 @@
         "core-js": "^2.5.1",
         "font-awesome": "^4.7.0",
         "ng2-charts": "^1.6.0",
+        "ng2-select": "^2.0.0",
+        "nodemailer": "^4.4.2",
         "rxjs": "^5.5.2",
         "yarn": "^1.3.2",
         "zone.js": "^0.8.18"
