--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "ng2-select": "^2.0.0",
         "nodemailer": "^4.4.2",
         "rxjs": "^5.5.2",
+        "status-indicator": "^1.0.9",
+        "vue-status-indicator": "^1.0.0",
         "yarn": "^1.3.2",
         "zone.js": "^0.8.18"
     },
